welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:1: warning: Detected apparent refinement of Unit; are you missing an '=' sign?
def peindre():Unit{baisseBrosse();leveBrosse()}
                  ^Array2:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def peindre():Unit{baisseBrosse();leveBrosse()}
                   ^Array2:1: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
def peindre():Unit{baisseBrosse();leveBrosse()}
                                  ^