welcome.lessons.welcome.array.basics.Array2.scala.code
def peindre():Unit{baisseBrosse();leveBrosse()}
def peindreColonne(T:Array[Color]){
  for (j<-1 to getMondeHauteur()-1){setCouleurBrosse(T(j))
                            avance()                        																		  peindre()
                                    
              
    
  }
}
override def run() {
  var T = new Array[Color] (getMondeHauteur())
  
  for (i<-1 to getMondeHauteur()-1){
    
  	T(i)=getCouleurSol()
		avance  
   
	}
  T(0)=getCouleurSol()
  for (i<- 1 to getMondeHauteur()-1){recule}
  
  for (k<- 1 to getMondeLargeur()){
    gauche()
    avance()
    droite()
    peindreColonne(T)
    for (i<- 1 to getMondeHauteur()){recule}
    
  }
  
}